fixed slide devision

--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
                     <div class="slide-content">
                         <p><img src="./images/lesson_5.1.svg" alt="" /></p>
                         <p><em><p style="text-align: center">Структура стекового кадра для языка ассемблера</p></em></p>
+                    </div>
+                </div>
+
+                <div class="slide" id="slide18">
+                    <div class="slide-content">
                         <pre><code>
-;
+;               
 ; eax [out] - max
 ; ebx [out] - min
 ;
